--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web3 Builder | Blockchain Developer Portfolio</title>
+    <title>Utkarsh Saxena Portfolio</title>
     <meta name="description" content="Expert Web3 developer specializing in DeFi protocols, smart contracts, and decentralized applications. Building the future of blockchain technology." />
   </head>
   <body>
